# willcataco-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  seeds.py
.github/workflows/: ci.yml  deploy-dev.yml  deploy-main.yml
app/: main.py
app/api/: routes.py
app/core/: config.py  database.py  dependencies.py  email.py  enums.py  mapping_database.py  response_schema.py  templates.py  time.py
app/modules/auth/: controllers.py  hashing.py  internal_tokens.py  jwt.py  routes.py  schemas.py
app/modules/email/: controllers.py  routes.py  schemas.py  services.py
app/modules/email/templates/: email_test.html  internal_login.html
app/modules/extra_payments/extra_payments/: controllers.py  routes.py  schemas.py  services.py
app/modules/extra_payments/payments/: controllers.py  routes.py  services.py
app/modules/health/: controller.py  routes.py
app/modules/members/: controllers.py  routes.py  services.py
app/modules/members/model/: models.py  schemas.py
app/modules/pdf_generator/: controllers.py  routes.py  services.py
app/modules/pdf_generator/templates/: base.html  extra_payments_catalog_report.html  helloworld.html  member_report.html  members_water_payments_report.html  new_members_report.html  receipt_extra_payment.html  receipt_water_payment.html  styles.css
app/modules/stats/: controllers.py  routes.py  services.py
app/modules/users/: controllers.py  routes.py  seeds.py  services.py
migrations/: env.py
migrations/versions/: 530bf0055108_complete_database_schema.py
(+60 files in other folders)
