[project]
name = "willcataco-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosmtplib>=4.0.2",
    "alembic>=1.16.5",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "greenlet>=3.1.1",
    "pwdlib[argon2]>=0.2.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
